--- a/.env.tsi
+++ b/.env.tsi
@@ -1,17 +1,21 @@
-DATASPACE=DLR
+DATASPACE=TSI
 STANDARDISATION=KIT
 DOMAIN=ROX
-CONNECTOR_NAME=jin-conn # for T-System Dataspace, the connector name is not required
+API-KEY=pRksn3EWdncz9zB8SlK9JXh3xZFHkg7ZamO30As6NRd2pQkI8A
 
 # Set of URLs of Dataspace APIs used by the Egde-Connector
 # Changing the URLs can result in changing the connected dataspace
-BASE_URL=https://vision-x-api.base-x-ecosystem.org
-TOKEN_URL=https://vision-x-auth.base-x-ecosystem.org/realms/user/protocol/openid-connect/token
+#BASE_URL=https://vision-x-api.base-x-ecosystem.org
+BASE_URL=https://deutsc-2ed85d7d-de.rox-dev.lila.dih.telekom.com
+#TOKEN_URL=https://vision-x-auth.base-x-ecosystem.org/realms/user/protocol/openid-connect/token
 
 # Asset Handling
-ASSET_READ_URL=${BASE_URL}/connectors/${CONNECTOR_NAME}/cp/management/v3/assets/request
-ASSET_READ_BY_ID_URL=${BASE_URL}/connectors/${CONNECTOR_NAME}/cp/management/v3/assets/{id}
-ASSET_CREATE_URL=${BASE_URL}/connectors/${CONNECTOR_NAME}/cp/management/v3/assets
+#ASSET_READ_URL=${BASE_URL}/connectors/${CONNECTOR_NAME}/cp/management/v3/assets/request
+ASSET_READ_URL=${BASE_URL}/data/v3/assets/request # TSI
+# ASSET_READ_BY_ID_URL=${BASE_URL}/connectors/${CONNECTOR_NAME}/cp/management/v3/assets/{id}
+ASSET_READ_BY_ID_URL=${BASE_URL}/data/v3/assets/{id} # TSI
+# ASSET_CREATE_URL=${BASE_URL}/connectors/${CONNECTOR_NAME}/cp/management/v3/assets
+ASSET_CREATE_URL=${BASE_URL}/data/v3/assets
 ASSET_EDIT_URL=${BASE_URL}/connectors/${CONNECTOR_NAME}/cp/management/v3/assets
 ASSET_DELETE_BY_ID_URL=${BASE_URL}/connectors/${CONNECTOR_NAME}/cp/management/v3/assets/{id}
 
