--- a/.env.tsi
+++ b/.env.tsi
@@ -1,7 +1,7 @@
 DATASPACE=TSI
 STANDARDISATION=KIT
 DOMAIN=ROX
-API-KEY=pRksn3EWdncz9zB8SlK9JXh3xZFHkg7ZamO30As6NRd2pQkI8A
+API-KEY=....
 
 # Set of URLs of Dataspace APIs used by the Egde-Connector
 # Changing the URLs can result in changing the connected dataspace
