edge connector update

--- a/.env
+++ b/.env
@@ -1,42 +1,68 @@
-DATASPACE=DLR
+DATASPACE=TSI
 STANDARDISATION=KIT
 DOMAIN=ROX
-CONNECTOR_NAME=jin-conn # for T-System Dataspace, the connector name is not required
+API-KEY=...
 
 # Set of URLs of Dataspace APIs used by the Egde-Connector
 # Changing the URLs can result in changing the connected dataspace
-BASE_URL=https://vision-x-api.base-x-ecosystem.org
-TOKEN_URL=https://vision-x-auth.base-x-ecosystem.org/realms/user/protocol/openid-connect/token
+#BASE_URL=https://vision-x-api.base-x-ecosystem.org
+BASE_URL=https://deutsc-2ed85d7d-de.rox-dev.lila.dih.telekom.com
+#TOKEN_URL=https://vision-x-auth.base-x-ecosystem.org/realms/user/protocol/openid-connect/token
 
 # Asset Handling
-ASSET_READ_URL=${BASE_URL}/connectors/${CONNECTOR_NAME}/cp/management/v3/assets/request
-ASSET_READ_BY_ID_URL=${BASE_URL}/connectors/${CONNECTOR_NAME}/cp/management/v3/assets/{id}
-ASSET_CREATE_URL=${BASE_URL}/connectors/${CONNECTOR_NAME}/cp/management/v3/assets
+#ASSET_READ_URL=${BASE_URL}/connectors/${CONNECTOR_NAME}/cp/management/v3/assets/request
+ASSET_READ_URL=${BASE_URL}/data/v3/assets/request # TSI
+# ASSET_READ_BY_ID_URL=${BASE_URL}/connectors/${CONNECTOR_NAME}/cp/management/v3/assets/{id}
+ASSET_READ_BY_ID_URL=${BASE_URL}/data/v3/assets/{id} # TSI
+# ASSET_CREATE_URL=${BASE_URL}/connectors/${CONNECTOR_NAME}/cp/management/v3/assets
+ASSET_CREATE_URL=${BASE_URL}/data/v3/assets
 ASSET_EDIT_URL=${BASE_URL}/connectors/${CONNECTOR_NAME}/cp/management/v3/assets
 ASSET_DELETE_BY_ID_URL=${BASE_URL}/connectors/${CONNECTOR_NAME}/cp/management/v3/assets/{id}
+#ASSET_EDIT_URL=${BASE_URL}/connectors/${CONNECTOR_NAME}/cp/management/v3/assets
+ASSET_EDIT_URL=${BASE_URL}/data/v3/assets # same as ASSET_CREATE
+#ASSET_DELETE_BY_ID_URL=${BASE_URL}/connectors/${CONNECTOR_NAME}/cp/management/v3/assets/{id}
+ASSET_DELETE_BY_ID_URL=${BASE_URL}/data/v3/assets/{id} # TODO Test
 
 # Policy Handling
 POLICY_READ_URL=${BASE_URL}/connectors/${CONNECTOR_NAME}/cp/management/v3/policydefinitions/request
 POLICY_READ_BY_ID_URL=${BASE_URL}/connectors/${CONNECTOR_NAME}/cp/management/v3/policydefinitions/{id}
+# POLICY_READ_URL=${BASE_URL}/connectors/${CONNECTOR_NAME}/cp/management/v3/policydefinitions/request
+POLICY_READ_URL=${BASE_URL}/data/v3/policydefinitions/request
+#POLICY_READ_BY_ID_URL=${BASE_URL}/connectors/${CONNECTOR_NAME}/cp/management/v3/policydefinitions/{id}
+POLICY_READ_BY_ID_URL=${BASE_URL}/data/v3/policydefinitions/{id} #TODO Test
 
 # Contract Handling
 CONTRACT_READ_URL=${BASE_URL}/connectors/${CONNECTOR_NAME}/cp/management/v3/contractdefinitions/request
 CONTRACT_CREATE_URL=${BASE_URL}/connectors/${CONNECTOR_NAME}/cp/management/v3/contractdefinitions
 CONTRACT_DELETE_BY_ID_URL=${BASE_URL}/connectors/${CONNECTOR_NAME}/cp/management/v3/contractdefinitions/{id}
+#CONTRACT_READ_URL=${BASE_URL}/connectors/${CONNECTOR_NAME}/cp/management/v3/contractdefinitions/request
+CONTRACT_READ_URL=${BASE_URL}/data/v3/contractdefinitions/request
+#CONTRACT_CREATE_URL=${BASE_URL}/connectors/${CONNECTOR_NAME}/cp/management/v3/contractdefinitions
+CONTRACT_CREATE_URL=${BASE_URL}/data/v3/contractdefinitions #TODO Test
+#CONTRACT_DELETE_BY_ID_URL=${BASE_URL}/connectors/${CONNECTOR_NAME}/cp/management/v3/contractdefinitions/{id}
+CONTRACT_DELETE_BY_ID_URL=${BASE_URL}/data/v3/contractdefinitions/{id} #TODO Test
 
 # Negotiation Handling
 NEGOTIATION_READ_URL=${BASE_URL}/connectors/${CONNECTOR_NAME}/cp/management/v3/contractnegotiations/request
 NEGOTIATION_DELETE_BY_ID_URL=${BASE_URL}/connectors/${CONNECTOR_NAME}/cp/management/v3/contractnegotiations/{id}/terminate
+#NEGOTIATION_READ_URL=${BASE_URL}/connectors/${CONNECTOR_NAME}/cp/management/v3/contractnegotiations/request
+NEGOTIATION_READ_URL=${BASE_URL}/data/v3/contractnegotiations/request # TODO unused?
+#NEGOTIATION_DELETE_BY_ID_URL=${BASE_URL}/connectors/${CONNECTOR_NAME}/cp/management/v3/contractnegotiations/{id}/terminate
+NEGOTIATION_DELETE_BY_ID_URL=${BASE_URL}/data/v3/contractnegotiations/{id}/terminate #TODO test
 
 # Agreement Handling
 AGREEMENT_READ_URL=${BASE_URL}/connectors/${CONNECTOR_NAME}/cp/management/v3/contractagreements/request
+#AGREEMENT_READ_URL=${BASE_URL}/connectors/${CONNECTOR_NAME}/cp/management/v3/contractagreements/request
+AGREEMENT_READ_URL=${BASE_URL}/data/v3/contractagreements/request #TODO test
 
 # EDR Handling
+#EDR_NEGOTIATION_URL=${BASE_URL}/connectors/${CONNECTOR_NAME}/cp/management/v3/edrs
 EDR_NEGOTIATION_URL=${BASE_URL}/connectors/${CONNECTOR_NAME}/cp/management/v3/edrs
+#EDR_READ_URL=${BASE_URL}/connectors/${CONNECTOR_NAME}/cp/management/v3/edrs/request
 EDR_READ_URL=${BASE_URL}/connectors/${CONNECTOR_NAME}/cp/management/v3/edrs/request
+#EDR_DATA_ADDRESS_URL=${BASE_URL}/connectors/${CONNECTOR_NAME}/cp/management/v3/edrs/{transfer_id}/dataaddress
 EDR_DATA_ADDRESS_URL=${BASE_URL}/connectors/${CONNECTOR_NAME}/cp/management/v3/edrs/{transfer_id}/dataaddress
 
 # Federated Catalog Handling
 FEDERATED_CAT_URL=${BASE_URL}/federated/catalog
-
-
+FEDERATED_CAT_URL=${BASE_URL}/federated/catalog # TODO
