--- a/.env.dlr
+++ b/.env.dlr
@@ -36,6 +36,10 @@ EDR_NEGOTIATION_URL=${BASE_URL}/connectors/${CONNECTOR_NAME}/cp/management/v3/ed
 EDR_READ_URL=${BASE_URL}/connectors/${CONNECTOR_NAME}/cp/management/v3/edrs/request
 EDR_DATA_ADDRESS_URL=${BASE_URL}/connectors/${CONNECTOR_NAME}/cp/management/v3/edrs/{transfer_id}/dataaddress
 
+# Catalog
+CATALOG_READ=${BASE_URL}/connectors/${CONNECTOR_NAME}/cp/management/v3/catalog/request
+CATALOG_FIND_KIT=${BASE_URL}/connectors/${CONNECTOR_NAME}/cp/management/v3/catalog/dataset/request
+
 # Federated Catalog Handling
 FEDERATED_CAT_URL=${BASE_URL}/federated/catalog
 
