added new endpoints

--- a/.env
+++ b/.env
@@ -63,6 +63,11 @@ EDR_READ_URL=${BASE_URL}/connectors/${CONNECTOR_NAME}/cp/management/v3/edrs/requ
 #EDR_DATA_ADDRESS_URL=${BASE_URL}/connectors/${CONNECTOR_NAME}/cp/management/v3/edrs/{transfer_id}/dataaddress
 EDR_DATA_ADDRESS_URL=${BASE_URL}/connectors/${CONNECTOR_NAME}/cp/management/v3/edrs/{transfer_id}/dataaddress
 
+# Catalog
+CATALOG_READ=${BASE_URL}/connectors/${CONNECTOR_NAME}/cp/management/v3/catalog/request
+CATALOG_FIND_KIT=${BASE_URL}/connectors/${CONNECTOR_NAME}/cp/management/v3/catalog/dataset/request
+
+
 # Federated Catalog Handling
-FEDERATED_CAT_URL=${BASE_URL}/federated/catalog
+FEDERATED_CAT_URL=Localhost:8002/federated/catalog
 FEDERATED_CAT_URL=${BASE_URL}/federated/catalog # TODO
